[tool.poetry]
name = "h3-viz"
version = "0.1.0"
description = ""
authors = ["Piotr Zakrzewski <1050269+PiotrZakrzewski@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.3.4"
googlemaps = "^4.5.3"
h3 = "^3.7.3"
Shapely = "^1.7.1"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pre-commit = "^2.15.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
